# University_Projects

./: README.md
3D Data Processing/: README.md
3D Data Processing/Lab 1/: README.md
3D Data Processing/Lab 1/patchmatch-v1/: pm.cpp
3D Data Processing/Lab 1/patchmatch-v2/: pm.cpp
3D Data Processing/Lab 2/sfm/: CMakeLists.txt  our_camera.yml
3D Data Processing/Lab 3/: trasformation.txt
3D Data Processing/Lab 4/: 3DP_Lab4_Point_Cloud_Segmentation.ipynb
Big Data Computing/: README.md
Big Data Computing/HW1/: CLI_inputs.txt  G044HW1.java  sample_50.out.txt
Big Data Computing/HW2/: G044HW2.java
Big Data Computing/HW3/: G044HW3.java  G044HW3_distinct.java  OutputFormat.txt  input.txt
Computer Vision/: README.md
Computer Vision/Final Project/: README.txt
Computer Vision/Final Project/BoWgenerator/: CMakeLists.txt
Computer Vision/Final Project/BoWgenerator/include/: BoWCreator.h
Computer Vision/Final Project/BoWgenerator/src/: BoWCreator.cpp  main.cpp
Computer Vision/Final Project/boat_generator/: CMakeLists.txt
Computer Vision/Final Project/boat_generator/include/: BoatDetection.h  ClassificationBoat.h  Dictionary.h  Filter.h  FilteringTest.h  Localization.h  debug_utils.h
Computer Vision/Final Project/boat_generator/src/: BoatDetection.cpp  ClassificationBoat.cpp  Dictionary.cpp  Filter.cpp  FilteringTest.cpp  Localization.cpp  debug_utils.cpp  main.cpp
Computer Vision/HW 1/: CMakeLists.txt  README.txt
Computer Vision/HW 1/src/: main.cpp
Computer Vision/HW 2/: CMakeLists.txt  README.txt
Computer Vision/HW 2/include/: filter.h
Computer Vision/HW 2/src/: filter.cpp  main.cpp
Computer Vision/HW 3/: CMakeLists.txt  README.txt
Computer Vision/HW 4/: CMakeLists.txt  README.txt
Computer Vision/HW 4/include/: PanoramicImage.h  panoramic_utils.h
Computer Vision/HW 4/src/: PanoramicImage.cpp  main.cpp
Game Theory/: README.md
Intelligent Robotics/: .gitignore  README.md
Intelligent Robotics/assignment_1/: CMakeLists.txt  README.md  input_tested_poses.txt  package.xml
Intelligent Robotics/assignment_2/: CMakeLists.txt  README.md  package.xml
Machine Learning/: LC_SimoneBoscolo_2026826.ipynb  NN_SimoneBoscolo_2026826.ipynb  README.md  SVM_SimoneBoscolo_2026826.ipynb
Reinforcement Learning/: 2026826_Boscolo_Simone_hw01.ipynb  2026826_Boscolo_Simone_hw02.ipynb  README.md
(+70 files in other folders)
